# pydiecom

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
pydiecom/: main.py
