[tool.poetry]
name = "pydiecom"
version = "0.1.0"
description = ""
authors = ["Michael Clark <mclark@sironamedical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynetdicom = "^2.0.2"

[tool.poetry.scripts]
pydiecom = 'pydiecom.main:main'

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.291"
pre-commit = "^3.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
